app-1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-1-controller
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-1
  template:
    metadata:
      labels:
        app: app-1
    spec:
      containers:
        - name: controller
          image: zot.homelab.kszpakowski.com/app-1-controller:latest@sha256:1ce51a7f1977352827a4ff3508fcdacbc9e98737714bf56afe846d742cd220af
          imagePullPolicy: IfNotPresent
          ports:
            - name: api
              containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
