app-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-service
spec:
  selector:
    app: app-1
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: api
  type: ClusterIP
